test/good/automatic/base/without_input/ret_zero/0063.lat
// good return

int main() {
  return 0;
}