test/bad/automatic/base/compile_time/0055.lat
int andrzej(int self) {
  return self;
}

int main() {
  return andrzej(2);
}
